Bug 446796 - Brush history docker still allows selecting brushes that have been deactivated.
Summary: Brush history docker still allows selecting brushes that have been deactivated.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: wolthera
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-10 17:32 UTC by wolthera
Modified: 2021-12-15 13:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2021-12-10 17:32:26 UTC
SUMMARY
After deleting/deactivating a brush, these brush still show up in the history docker and can be selected.

STEPS TO REPRODUCE
1. Select a brush preset.
2. Trashcan it in the brush presets dropdown.
3. Go to the history docker and try selecting the brush just deactivated.

OBSERVED RESULT
You can still see and select the preset.

EXPECTED RESULT
Preset should not show up in the first place.

SOFTWARE/OS VERSIONS
Krita

 Version: 5.0.0-beta5 (git 6749d05)
 Languages: en_US, en, en_GB, en, nl, en_US, en
 Hidpi: false

Qt

  Version (compiled): 5.15.3
  Version (loaded): 5.15.3

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 5.4.0-91-generic
  Pretty Productname: KDE neon User - Plasma 25th Anniversary Edition
  Product Type: neon
  Product Version: 20.04
  Desktop: KDE
Comment 1 Bug Janitor Service 2021-12-13 22:28:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1228
Comment 2 Dmitry Kazakov 2021-12-15 13:42:59 UTC
Git commit fc6ca80da7dda1a66a6eb4f3522d736c5db794cb by Dmitry Kazakov, on behalf of Wolthera van Hövell.
Committed on 15/12/2021 at 13:42.
Pushed by dkazakov into branch 'krita/5.0'.

Port preset history to use the resource model more.

This means the presets are pulled from the resource model, 
as well, items are updated based on signals from the resource model.

So the presets stay up to date and are deleted from the 
list if they have been deactivated.

M  +38   -15   plugins/dockers/presethistory/presethistory_dock.cpp
M  +5    -2    plugins/dockers/presethistory/presethistory_dock.h

https://invent.kde.org/graphics/krita/commit/fc6ca80da7dda1a66a6eb4f3522d736c5db794cb
Comment 3 Dmitry Kazakov 2021-12-15 13:44:22 UTC
Git commit fdd8eff13ac48f0b145a974ab1e1563e34b9a9ff by Dmitry Kazakov, on behalf of Wolthera van Hövell.
Committed on 15/12/2021 at 13:43.
Pushed by dkazakov into branch 'master'.

Port preset history to use the resource model more.

This means the presets are pulled from the resource model, 
as well, items are updated based on signals from the resource model.

So the presets stay up to date and are deleted from the 
list if they have been deactivated.

M  +38   -15   plugins/dockers/presethistory/presethistory_dock.cpp
M  +5    -2    plugins/dockers/presethistory/presethistory_dock.h

https://invent.kde.org/graphics/krita/commit/fdd8eff13ac48f0b145a974ab1e1563e34b9a9ff