Port preset history to use the resource model more.

This means the presets are pulled from the resource model, as well,
items are updated based on signals from the resource model.

So the presets stay up to date and are deleted from the list if they
have been deactivated.

BUG:446796