plugins/dockers/presethistory/presethistory_dock.h
@@ -13,6 +13,7 @@
 #include <KisKineticScroller.h>
 
 #include <KoCanvasObserverBase.h>
+#include <KisResourceModel.h>
 
 #include <kis_canvas2.h>
 #include <kis_types.h>
@@ -33,8 +34,9 @@ class PresetHistoryDock : public QDockWidget, public KoCanvasObserverBase {
     Q_OBJECT
 public:
     enum HistoryDataRole {
-        BrushPresetRole = Qt::UserRole,
-        BubbleMarkerRole = Qt::UserRole + 1
+        ResourceID = Qt::UserRole,
+        BubbleMarkerRole = Qt::UserRole + 1,
+        MD5SumRole = Qt::UserRole + 2
     };
 
     enum DisplayOrder {
@@ -54,6 +56,7 @@ private Q_SLOTS:
     void canvasResourceChanged(int key, const QVariant& v);
     void slotSortingModeChanged(QAction *action);
     void slotContextMenuRequest(const QPoint &pos);
+    void updatePresets();
 private:
     void updatePresetState(int position);
     int bubblePreset(int position);
@@ -66,6 +69,7 @@ private:
     QAction *m_actionSortBubble;
     QActionGroup *m_sortingModes;
     DisplayOrder m_sorting {Static};
+    KisResourceModel* m_resourceModel {0};
     bool m_block {false};
     bool m_initialized {false};
 };
